# khet-table

./: .gitignore  Cargo.toml  README.md  plot.py
src/: .gitignore  agent.rs  bb.rs  bexpr.rs  board.rs  clock.rs  compare.rs  learn.rs  lib.rs  main.rs  mcts.rs  model.rs  nn.rs  render.rs  weights.rs
src/nn/: mod.rs  model.rs  ops.rs  search.rs  train.rs
src/ui/: app.rs  bot.rs  command.rs  consts.rs  mod.rs  render.rs
