[package]
name = "khet-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
euclid = "0.22.1"
log = "0.4.0"
pixels = "0.9.0"
rand = "0.8.5"
raqote = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typed-arena = "2.0.1"
winit = "0.27.2"