[package]
name = "khet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograd = { version = "2.0.0-rc3" }
bumpalo = { version = "3.11", features = ["collections"] }
env_logger = "0.8.4"
log = "0.4.0"
num_cpus = "1.13.1"
rand = "0.8.5"
rayon = "1.5"
typed-arena = "2.0.1"